[tool.poetry]
name = "ax-get"
version = "1.0.0"
description = "Grabs a copy of Axelor ERP source code and binaries."
authors = ["Richard J. <techpowerawaits@outlook.com>"]
license = "0BSD"
readme = "README.rst"
repository = "https://github.com/TechPowerAwaits/ax-get"
documentation = "https://github.com/TechPowerAwaits/ax-get/blob/main/README.rst"
keywords = ["downloader", "axelor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ax-get = "ax_get.script:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
